# agentscope-trace

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
examples/: custom_agent_example.py  langchain_example.py
src/agentscope_trace/: __init__.py  client.py  decorator.py  models.py
src/agentscope_trace/backend/: __init__.py  app.py  storage.py
tests/: conftest.py  test_models.py  test_trace.py
